binary graph operations

--- a/src/components/Lab2/Lab2.css
+++ b/src/components/Lab2/Lab2.css
@@ -2,3 +2,11 @@
   display: flex;
   justify-content: space-around;
 }
+
+.operation-container {
+  display: flex;
+}
+
+.operation-container div {
+  width: 40%;
+}
