--- a/src/components/Lab2/Lab2.module.css
+++ b/src/components/Lab2/Lab2.module.css
@@ -1,12 +1,12 @@
-.input-container {
+.inputContainer {
   display: flex;
   justify-content: space-around;
 }
 
-.operation-container {
+.operationContainer {
   display: flex;
 }
 
-.operation-container div {
+.operationContainer div {
   width: 40%;
 }
